<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/colorDarkDialog"
    android:padding="20dp"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:layout_gravity="center_horizontal"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remove_info"
        />


    <LinearLayout
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/buttonNegative"
            android:text="@string/no"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:background="@drawable/button_shape"
            android:shadowColor="#3EA8A4"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5" />

        <Button
            android:id="@+id/buttonPositive"
            android:text="@string/yes"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:background="@drawable/button_shape"
            android:shadowColor="#3EA8A4"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5" />

    </LinearLayout>

</LinearLayout>