<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="pl.logiti.imagestorage.fragments.ShowFragment">

        <ImageView
            android:id="@+id/imageViewPicture"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_margin="5dp"
            android:textSize="20dp"
            android:textColor="@color/colorAccent"
            android:paddingTop="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@color/black"
            android:text="@string/category"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textViewCategory"
            android:layout_margin="5dp"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/category"
            android:background="@color/black"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_margin="5dp"
            android:textSize="20dp"
            android:textColor="@color/colorAccent"
            android:paddingTop="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/description"
            android:background="@color/black"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textViewDescription"
            android:layout_margin="5dp"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/description"
            android:background="@color/black"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/buttonKeep"
                    android:text="@string/keep"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"

                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:background="@drawable/button_group"
                    android:shadowColor="#3EA8A4"
                    android:shadowDx="0"
                    android:shadowDy="0"
                    android:shadowRadius="5" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/buttonDelete"
                    android:text="@string/delete"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"

                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:background="@drawable/button_group"
                    android:shadowColor="#3EA8A4"
                    android:shadowDx="0"
                    android:shadowDy="0"
                    android:shadowRadius="5" />
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>
</ScrollView>